--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="file:///C:/Users/Veeti/Desktop/oma%20nettisivu/index.html">Etusivu</a></li>
-                    <li><a href="file:///C:/Users/Veeti/Desktop/oma%20nettisivu/tietoa.html">Tietoa</a></li>
-                    <li><a href="file:///C:/Users/Veeti/Desktop/oma%20nettisivu/hinnat.html">Hinnat</a></li>
+                    <li><a href="index.html">Etusivu</a></li>
+                    <li><a href="tietoa.html">Tietoa</a></li>
+                    <li><a href="hinnat.html">Hinnat</a></li>
                 </ul>
             </nav>
         </div>
